AutoPilot Release Notes


Previously unpublished release Version

 - Deutsch
    - Extern angeschlossene ESATA-Datenträger wurden von AutoPilot nicht erkannt.

 - English
    - Externally connected ESATA data carriers were not recognized by AutoPilot.


Version 1.1-400 vom 04.02.2024

 - Deutsch
    - Anzeigefehler behoben

 - English
    - Fixed display error


Version 1.1-300 vom 03.02.2024

 -Deutsch
    - Funktion zur Konvertierung von Bytes in ein menschenlesbares Format hinzugefügt. Danke @luddinho
    - Funktion für die Auswertung der Datenträgergröße hinzugefügt. Danke @luddinho
    - Es wurde eine Wartezeit für Hyper-Backup Aufgaben im auszuführenden Shell-Script hinzugefügt. Damit die Änderungen wirksam werden, muss der Script Code erneut an das auszuführende Shell-Script übergeben werden. Thanks @luddinho
    - Shell Scripte wurden beim Anstecken eines externen Datenträgers auch dann ausgeführt, wenn AutoPilot im Paketzentrum gestoppt wurde. Fehler wurde behoben.
    - Wenn der Pfad oder der Name einer Shell-Skriptdatei nicht gefunden werden konnte, wird eine entsprechende Fehlermeldung angezeigt. Außerdem wird diese Shell-Skript-Datei nicht mehr zur Auswahl angeboten, um ein Basic Backup oder Hyper Backup Aufgabe zu konfigurieren.
    - Wenn kein externer Datenträger angeschlossen ist, wird ein entsprechender Hinweis unter dem Menüpunkt Externe Datenträger ausgegeben.

 -English
    - Function for converting bytes into a human-readable format added. Thanks @luddinho
    - Function for evaluating the disk size added. Thanks @luddinho
    - Added a wait time for hyper-backup tasks in the shell script to be executed. For the changes to take effect, the script code must be passed again to the shell script to be executed. Thanks @luddinho
    - Shell scripts were executed when an external data carrier was plugged in, even if AutoPilot was stopped in the package center. Bug has been fixed.